@@ -3,6 +3,7 @@ Version 1.0-rc3 (changes from aircrack-ng 1.0-rc2) - Released ?? ??? 2009:
   (.kismet.csv instead of .csv).
 * aircrack-ng: Fixed -w with WEP.
 * aircrack-ng: Fixed useless memory allocation.
+* aircrack-ng: Fixed compilation with gcc 2.95.
 * aircrack-ng: Fixed compilation on 64 bit (SHA-SSE2).
 * aircrack-ng: Fixed errors when compiling on OS X 10.5.6 PPC.
 * aircrack-ng: Added an option to write the key to a file.
